# Rust-P2P-Notebook

./: Cargo.toml  notes.db
files/: bir.txt  dort.txt  filenames.txt  uc.txt
src/: db.rs  lib.rs  main.rs
ui/: main.slint
