[package]
name = "ttt"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.14.1"
tokio = { version = "1.50.0", features = ["full"] }
iroh = "0.95.0"
iroh-blobs = "0.97.0"
rand = "0.9.0"
anyhow = "1.0.102"
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
slint-build = "1.14.1"